<?xml version="1.0"?>
<package format="2">
  <name>ROSPointsViewerX3D</name>
  <version>2.0.0</version>
  <description>Test point viewer for ros using X3D lib</description>

  <maintainer email="kiorisyshen@gmail.com">Sijie Shen</maintainer>
  <license>MIT</license>
  <author email="kiorisyshen@gmail.com">Sijie Shen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosbag</depend>
  <depend>pcl_ros</depend>
  
</package>
